<?xml version="1.0"?>
<package format="2">
  <name>octomap_waypoint_plugin</name>
  <version>0.0.0</version>
  <description>The octomap_waypoint_plugin package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lmark@todo.todo">lmark</maintainer>
  <depend>pluginlib</depend>
  <depend>nodelet</depend>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <build_depend>larics_motion_planning</build_depend>
  <build_depend>uav_ros_tracker</build_depend>

  <exec_depend>larics_motion_planning</exec_depend>
  <exec_depend>uav_ros_tracker</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <uav_ros_tracker plugin="${prefix}/plugins.xml"/>

  </export>
</package>
